# pycon-us-2023-sphinxy

./: pyproject.toml
.github/workflows/: docs.yaml
docs/: conf.py  index.rst
docs/_templates/: gh-pages-redirect.html
docs/_templates/sidebar/: versions.html
main/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
main/.doctrees/: environment.pickle  index.doctree  modules.doctree
src/sphinxy/: riddle.py  sphinx.py
v0.0.1/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  sphinxy.html
v0.0.1/.doctrees/: environment.pickle  index.doctree  modules.doctree  sphinxy.doctree  sphinxy.riddle.doctree  sphinxy.sphinx.doctree
v0.0.2/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
v0.0.2/.doctrees/: environment.pickle  index.doctree  modules.doctree  sphinxy.doctree  sphinxy.riddle.doctree  sphinxy.sphinx.doctree
v0.1.0/: .buildinfo  index.html  searchindex.js  sphinxy.riddle.html  sphinxy.sphinx.html
v0.1.0/.doctrees/: environment.pickle  index.doctree  modules.doctree  sphinxy.doctree  sphinxy.riddle.doctree  sphinxy.sphinx.doctree
v0.1.1/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
v0.1.1/.doctrees/: environment.pickle  sphinxy.doctree  sphinxy.riddle.doctree  sphinxy.sphinx.doctree
v0.1.1/_sources/: index.rst.txt
