[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxy"
description = "Examples for sphinx-tutorial"
version = "0.0.1"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name = "Aya Elsayed", email = "ayah.ehab11@gmail.com" },
  { name = "Olga Matoula", email = "olgamatoula@gmail.com" },
  { name = "Bradon Zhang", email = "bradonzhang@gmail.com" },
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pytest==7.3.1"]
docs = ["Sphinx==6.1.3", "sphinx-autobuild==2021.3.14", "sphinx-multiversion==0.2.4", "furo==2023.3.27"]

[tool.setuptools.packages.find]
where = ["src"]
